# progetto_programmazione

./: CMakeLists.txt
Header files/: Account.h  AccountCollection.h  AccountDialog.h  AccountFactory.h  AccountListView.h  AccountView.h  BankAccount.h  BankAccountView.h  BankOperation.h  Constants.h  Controller.h  DeleteAccountDialog.h  DeleteOperationDialog.h  MainFrame.h  Model.h  MyApp.h  Operation.h  OperationDialog.h  OperationFactory.h  SavingAccount.h  SavingAccountView.h  View.h
Source files/: Account.cpp  AccountCollection.cpp  AccountDialog.cpp  AccountFactory.cpp  AccountListView.cpp  AccountView.cpp  BankAccount.cpp  BankAccountView.cpp  BankOperation.cpp  Controller.cpp  DeleteAccountDialog.cpp  DeleteOperationDialog.cpp  MainFrame.cpp  MyApp.cpp  OperationDialog.cpp  OperationFactory.cpp  SavingAccount.cpp  SavingAccountView.cpp
Utilities/: memorized_data
unit_test/: AccountFactoryTest.cpp  BankAccountTest.cpp  CMakeLists.txt  OperationFactoryTest.cpp  SavingAccountTest.cpp
